[tool.poetry]
name = "user-manager-api"
version = "0.1.0"
description = "This is a practice project for user management and API creation."
authors = ["Axier <axierperlaz2018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^3.0.3"
SQLAlchemy = "^2.0.36"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
email-validator = "^2.2.0"
flask-jwt-extended = "^4.7.1"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
